resharper/resharper-unity/test/data/CSharp/Intentions/QuickFixes/InvalidSignature/Availability/ReorderParametersThreeParameters_321.cs
using UnityEngine;
using UnityEditor;

public class FooProcessor : AssetPostprocessor
{
    private void OnPostprocessGameObjectWithUserProperties({caret}object[] values, string[] propNames, GameObject go)
    {
    }
}